--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Kagiso Gabaatlhole Portfolio</title>
   </head>
   <body>
-    <h1>Hello, I'm Kagiso 👋</h1>
+    <h1>Hello, I'm Kagiso Gabaatlhole👋</h1>
     <p>Welcome to my data science portfolio website!</p>
   </body>
 </html>
